--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,8 @@
+
+<script language="Javascript">
+Stripe.setPublishableKey("<%= ENV['STRIPE_TEST_PUBLISHABLE_KEY'] %>");
+</script>
+
 <h1 align="center">Enter your information</h1>
 
 
@@ -90,6 +95,58 @@
 </div>
 
 <% end %>
+
+
+
+<%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+
+<%= fields_for( :payment) do |p| %>
+
+<div class="row col-md-12">
+
+
+  <div class="row col-md-12" align="center">
+
+    <div class="form-group-1 col-md-6 no-left-padding">
+      <%= p.label :card_number, "Card Number", data: {stripe: 'label'} %>
+      <%= p.text_field :card_number, class: "form-conrol", required:true, data:{stripe: 'number'} %>
+    </div>
+    <div class="form-group-1 col-md-6">
+      <%= p.label :card_cvv, "Card CVV", data: {stripe: 'label'} %>
+      <%= p.text_field :card_CVV, class: "form-conrol", required:true, data:{stripe: 'cvc'} %>
+    </div>
+
+    <div class="form-group-1 12">
+      <div class="col-md-12">
+        <%= p.label :card_expires, "Card Expires", data: {stripe: 'label'} %>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <%= p.select :card_expires_month, options_for_select(Payment.month_options), 
+                    {include_blank: "Month"}, "data-stripe" => "exp-month",
+                    class: "form-control", required:true %>
+    </div>
+    <div class="col-md-12">
+      <%= p.select :card_expires_year, options_for_select(Payment.year_options.push), 
+                    {include_blank: "Year"}, class: "form-control",
+                    data: {stripe: "exp-year"}, required:true %>
+    </div>
+
+  </div>
+
+  <div class="form-group-1" align= "center">
+
+  
+  <%= p.submit "Submit payment", class: 'btn btn-primary btn-lg' %>
+  
+  
+  </div>
+</div>
+
+
+<% end %>
+<% end %>
+
 
 <div align="center">
 <h1> List of Users </h1>
