--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -1,3 +1,60 @@
-<h1> this is a map </h1>
+<h1> Map</h1>
+
+<script src="//maps.google.com/maps/api/js?key="></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+
+<body onload="initialize()">
+
+
+ <div id="map" style="width: 800px; height: 600px;"></div>
+ 
+  
+</body>
+
+
+
+<script>
+
+  var locations =  <%=@users.to_json.html_safe%>
+
+  console.log(locations);
+ 
+
+
+  var geocoder;
+  var map;
+  function initialize() {
+    geocoder = new google.maps.Geocoder();
+    var latlng = new google.maps.LatLng(-34.397, 150.644);
+    var mapOptions = {
+      zoom: 8,
+      center: latlng
+    }
+    map = new google.maps.Map(document.getElementById('map'), mapOptions);
+    for (var i =0; i<locations.length; i++){
+      codeAddress(locations[i].address);
+    }
+    
+
+
+  }
+
+  function codeAddress(address) {
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == 'OK') {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        //alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+
+
+</script>
 
 <%= link_to 'Go back to info page', welcome_info_path %>
